--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,17 @@ jobs:
 
             - name: build
               run: |
-                  ./autogen.sh && RUSTFLAGS="-Dwarnings" WERROR_CFLAGS='-Werror -Wno-error=deprecated-declarations'
+                  export CC="/usr/bin/clang" ;
+                  export CXX="/usr/bin/clang++" ;
+                  export CPP="/usr/bin/clang -E" ;
+                  export LD="/usr/bin/lld" ;
+                  export AR="/usr/bin/llvm-ar" ;
+                  export AS="/usr/bin/llvm-as" ;
+                  export CCFLAGS+=' -fuse-ld=lld' ;
+                  export CXXFLAGS+=' -fuse-ld=lld' ;
+                  export CFLAGS+="-Werror -Wno-error=deprecated-declarations"
+                  export CXXFLAGS+="-Werror -Wno-error=deprecated-declarations"
+
+                  ./autogen.sh
                   ./configure --enable-checking=glyphs
                   make -j$(nproc)
